--- a/app/src/main/res/drawable/border_item_movie_details_genre.xml
+++ b/app/src/main/res/drawable/border_item_movie_details_genre.xml
@@ -4,14 +4,14 @@
         <layer-list>
             <item>
                 <shape>
-                    <corners android:radius="16dp" />
-                    <stroke android:color="@color/colorRatingBar" android:width="1dp" />
+                    <corners android:radius="12dp" />
+                    <stroke android:color="@color/details_genre_border" android:width="1dp" />
                 </shape>
             </item>
             <item>
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/colorRatingBar" />
-                    <corners android:radius="16dp" />
+                    <solid android:color="@color/details_genre_border" />
+                    <corners android:radius="12dp" />
                 </shape>
             </item>
         </layer-list>
