--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -128,6 +128,26 @@
             app:layout_constraintTop_toTopOf="@+id/ivTime"
             tools:text="2h 13min" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewGenres"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintTop_toTopOf="@+id/ivTime"
+            app:layout_constraintStart_toEndOf="@+id/tvTime"
+            app:layout_constraintEnd_toStartOf="@+id/ivFavMovie"
+            app:layout_constraintBottom_toBottomOf="@+id/ivTime"/>
+
+        <ImageView
+            android:id="@+id/ivFavMovie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/ivTime"
+            app:layout_constraintEnd_toEndOf="@+id/glEnd"
+            app:layout_constraintBottom_toBottomOf="@+id/ivTime"
+            app:srcCompat="@drawable/ic_favorite_border_white" />
+
         <TextView
             android:id="@+id/tvStoryline"
             android:layout_width="0dp"
@@ -160,7 +180,7 @@
             android:layout_marginTop="12dp"
             android:background="@drawable/border_item_yellow"
             android:drawableStart="@drawable/ic_play_circle_yellow"
-            android:drawablePadding="4dp"
+            android:drawablePadding="6dp"
             android:gravity="center_vertical"
             android:padding="6dp"
             android:text="@string/fragment_movie_datails.trailer"
@@ -293,7 +313,7 @@
             app:layout_constraintTop_toTopOf="@+id/tvProduction"
             app:layout_constraintStart_toStartOf="@+id/tvOriginalTitleContent"
             app:layout_constraintEnd_toEndOf="@+id/glEnd"
-            tools:text="United Kingdom, USA"/>
+            tools:text="Warner Bros"/>
 
         <TextView
             android:id="@+id/tvPremiere"
